...
) {
    TopAppBar(
        title = { Text(title) },
        navigationIcon = {
            Spacer(Modifier.width(8.dp))
            Icon(
                Icons.Default.ArrowBack, "navigate back",
                modifier = Modifier.clickable {
                    onBackNavigation()
                })
        },
        actions = actions
    )
...
